# urho3d-minimal-new-project

./: .gitignore  .gitmodules  CMakeLists.txt  addon.json  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.addon/: addon_editor.json  addon_navigation.json
CMake/: Addons.cmake  Editor.cmake  Navigation.cmake
addon/: addon_editor.json  addon_navigation.json
android/launcher-app/: build.gradle.kts
android/launcher-app/src/main/assets/: Data.pak  EditorData.pak
cmake/: dependencies.cmake  project_options.h.in
docs/: setup_editor.md  setup_navigation.md
package_include/: readme.txt
raw/: scene.blend  scene.blend1
src/: GameEvents.h  GameLogic.cpp  GameLogic.h  StartupApplication.cpp
src/Components/: Components.xml  GroupInstance.cpp  generate_components.bat  generate_components.sh
src/Components/Generators/: urho3d-components-body.gsl  urho3d-components-header.gsl  urho3d-components.gsl
src/Components/impl/: CCMarker.cpp  TestComponent.cpp
src/Subsystems/LoaderTools/: ComponentExporter.cpp
src/Subsystems/LuaScripting/: LuaAPI.cpp  LuaAPI.h  LuaAPI.pkg  LuaScripting.cpp  LuaScripting.h  generate_lua.sh
src_addon/Editor/: CMakeLists.txt
src_addon/Navigation/: CMakeLists.txt  GameNavigation.cpp  GameNavigation.h
tools/: export_game.sh  update_cpm.sh
tools/Dockerimages/: Dockerfile-arm  Dockerfile-arm-update  Dockerfile-mingw-update  Dockerfile-native-update  Dockerfile-web-update  build-images.sh
tools/Dockerimages/android/: settings.gradle.kts
tools/generators/: gsl
tools/generators/lua/: tolua++
